[package]
name = "rustgram"
version = "0.1.8"
edition = "2021"
repository = "https://gitlab.com/grammm/rustgram/rustgram"
authors = ["Jörn Heinemann <joernheinemann@gmx.de>"]
license = "MIT"
description = "A fast server framework for hyper with app builder from yml file"

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

[dependencies]
hyper = { version = "^0.14.26", features = ["server", "http1", "runtime"] }

# yml handling
serde_yaml = { version = "0.9.21", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# router for matching url
matchit = "0.7.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "runtime", "stream"] }
tokio = { version = "1", features = ["full"] }
# to stream the input body
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }

[features]
h2 = ["hyper/http2"]

route_builder = ["serde","serde_yaml"]